<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#00000000"
            android:src="@drawable/ic_close_white_24dp"
            android:tint="@color/colorBtnGray" /><!--android:tint : 設定矢量繪製顏色-->

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            android:textColor="@color/colTxtGreen"
            android:textSize="30dp"
            android:inputType="date"></TextView>

        <EditText
            android:id="@+id/edtTimeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:alpha="0.8"
            android:hint="@string/time_hint"
            android:textColor="@color/colTxtGreen"
            android:textColorHint="@color/colTxtGreen"
            android:textSize="20dp"
            android:onClick="timePicker"/>

        <EditText
            android:id="@+id/edtTimeEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:alpha="0.8"
            android:hint="@string/time_hint"
            android:textColor="@color/colTxtGreen"
            android:textColorHint="@color/colTxtGreen"
            android:textSize="20dp"
            android:onClick="timePicker"/>

        <EditText
            android:id="@+id/edtNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.8"
            android:hint="@string/itinerary_name_hint"
            android:textColor="@color/colTxtGreen"
            android:textColorHint="@color/colTxtGreen"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:scrollHorizontally="true"
            android:minLines="5"
            android:textColor="@color/colTxtGreen"
            android:textColorHint="@color/colTxtGreen"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edtGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:hint="@string/guest_hint"
            android:textColor="@color/colTxtGreen"
            android:textColorHint="@color/colTxtGreen"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:hint="@string/place_hint"
            android:textColor="@color/colTxtGreen"
            android:textColorHint="@color/colTxtGreen"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:text="CREATE"
        android:textColor="@color/colorBtnGray"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>